feat: add propper native k8s schema references

--- a/charts/cloudflare-access-webhook-redirect/values.yaml
+++ b/charts/cloudflare-access-webhook-redirect/values.yaml
@@ -98,51 +98,30 @@ podAnnotations: {}
 podLabels: {}
 
 # @schema
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.PodSecurityContext"
 # @schema
 podSecurityContext:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Run pod as non-root user
   runAsNonRoot: true
 
-  # @schema
-  # type: integer
-  # @schema
   # -- User ID to run as
   runAsUser: 10001
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Group ID for file system access
   fsGroup: 10001
 
 # @schema
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.SecurityContext"
 # @schema
 securityContext:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Allow privilege escalation
   allowPrivilegeEscalation: false
 
-  # @schema
-  # additionalProperties: true
-  # @schema
   capabilities:
-    # @schema
-    # type: array
-    # @schema
     # -- Linux capabilities to drop
     drop:
       - ALL
 
-  # @schema
-  # type: boolean
-  # @schema
   # -- Mount root filesystem as read-only
   readOnlyRootFilesystem: false
 
@@ -289,6 +268,8 @@ ingress:
 
   # @schema
   # type: array
+  # items:
+  #   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.IngressTLS"
   # @schema
   # -- TLS configuration for ingress
   # Example:
@@ -298,194 +279,115 @@ ingress:
   tls: []
 
 # @schema
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.ResourceRequirements"
 # @schema
 resources:
-  # @schema
-  # additionalProperties: true
-  # @schema
+  # -- Resource limits
   limits:
-    # @schema
-    # type: string
-    # @schema
     # -- Maximum CPU usage (e.g. 100m = 0.1 core)
     cpu: 100m
 
-    # @schema
-    # type: string
-    # @schema
     # -- Maximum memory usage (e.g. 64Mi)
     memory: 50Mi
 
-  # @schema
-  # additionalProperties: true
-  # @schema
+  # -- Resource requests
   requests:
-    # @schema
-    # type: string
-    # @schema
     # -- Guaranteed CPU request
     cpu: 10m
 
-    # @schema
-    # type: string
-    # @schema
     # -- Guaranteed memory request
     memory: 35Mi
 
 # @schema
-# additionalProperties: true
+# allOf:
+#   - $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Probe"
+#   - properties:
+#       enabled:
+#         type: boolean
 # @schema
 startupProbe:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Enable startup probe
   enabled: true
 
-  # @schema
-  # additionalProperties: true
-  # @schema
   httpGet:
-    # @schema
-    # type: string
-    # @schema
     # -- Health check path
     path: /health
 
-    # @schema
-    # type: string
-    # @schema
     # -- Health check port
     port: http
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Initial delay before probe starts
   initialDelaySeconds: 2
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Probe frequency
   periodSeconds: 5
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Probe timeout
   timeoutSeconds: 3
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Failure threshold
   failureThreshold: 30
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Success threshold
   successThreshold: 1
 
 # @schema
-# additionalProperties: true
+# allOf:
+#   - $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Probe"
+#   - properties:
+#       enabled:
+#         type: boolean
 # @schema
 livenessProbe:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Enable liveness probe
   enabled: true
 
-  # @schema
-  # additionalProperties: true
-  # @schema
   httpGet:
-    # @schema
-    # type: string
-    # @schema
     # -- Health check path
     path: /health
 
-    # @schema
-    # type: string
-    # @schema
     # -- Health check port
     port: http
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Initial delay before probe starts
   initialDelaySeconds: 10
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Probe frequency
   periodSeconds: 10
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Probe timeout
   timeoutSeconds: 5
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Failure threshold
   failureThreshold: 3
 
 # @schema
-# additionalProperties: true
+# allOf:
+#   - $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Probe"
+#   - properties:
+#       enabled:
+#         type: boolean
 # @schema
 readinessProbe:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Enable readiness probe
   enabled: true
 
-  # @schema
-  # additionalProperties: true
-  # @schema
   httpGet:
-    # @schema
-    # type: string
-    # @schema
     # -- Health check path
     path: /health
 
-    # @schema
-    # type: string
-    # @schema
     # -- Health check port
     port: http
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Initial delay before probe starts
   initialDelaySeconds: 5
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Probe frequency
   periodSeconds: 5
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Probe timeout
   timeoutSeconds: 3
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Failure threshold
   failureThreshold: 3
 
@@ -531,18 +433,24 @@ autoscaling:
 
 # @schema
 # type: array
+# items:
+#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.TopologySpreadConstraint"
 # @schema
 # -- Pod topology spread constraints for availability
 topologySpreadConstraints: []
 
 # @schema
 # type: array
+# items:
+#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Volume"
 # @schema
 # -- Additional volumes (e.g., cache, tmp)
 volumes: []
 
 # @schema
 # type: array
+# items:
+#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.VolumeMount"
 # @schema
 # -- Additional volume mounts (e.g., /cache)
 volumeMounts: []
@@ -556,13 +464,14 @@ nodeSelector: {}
 
 # @schema
 # type: array
+# items:
+#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Toleration"
 # @schema
 # -- Tolerations for taints
 tolerations: []
 
 # @schema
-# type: object
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Affinity"
 # @schema
 # -- Pod affinity rules
 affinity: {}
