--- a/charts/netcup-offer-bot/values.yaml
+++ b/charts/netcup-offer-bot/values.yaml
@@ -60,51 +60,30 @@ env:
   logLevel: info
 
 # @schema
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.PodSecurityContext"
 # @schema
 podSecurityContext:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Run pod as non-root user
   runAsNonRoot: true
 
-  # @schema
-  # type: integer
-  # @schema
   # -- User ID to run as
   runAsUser: 1000
 
-  # @schema
-  # type: integer
-  # @schema
   # -- Group ID for file system access
   fsGroup: 1000
 
 # @schema
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.SecurityContext"
 # @schema
 securityContext:
-  # @schema
-  # type: boolean
-  # @schema
   # -- Allow privilege escalation
   allowPrivilegeEscalation: false
 
-  # @schema
-  # additionalProperties: true
-  # @schema
   capabilities:
-    # @schema
-    # type: array
-    # @schema
     # -- Linux capabilities to drop
     drop:
       - ALL
 
-  # @schema
-  # type: boolean
-  # @schema
   # -- Mount root filesystem as read-only
   readOnlyRootFilesystem: true
 
@@ -138,6 +117,8 @@ serviceAccount:
 
 # @schema
 # type: array
+# items:
+#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.TopologySpreadConstraint"
 # @schema
 # -- Pod topology spread constraints for availability
 topologySpreadConstraints: []
@@ -209,28 +190,16 @@ metrics:
     scrapeTimeout: 30s
 
 # @schema
-# additionalProperties: true
+# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.ResourceRequirements"
 # @schema
 resources:
-  # @schema
-  # additionalProperties: true
-  # @schema
   # -- Resource limits for the container.
   limits:
-    # @schema
-    # type: string
-    # @schema
     # -- Maximum allowed memory usage.
     memory: 20Mi
 
-  # @schema
-  # additionalProperties: true
-  # @schema
   # -- Resource requests for the container.
   requests:
-    # @schema
-    # type: string
-    # @schema
     # -- Minimum guaranteed memory allocation.
     memory: 15Mi
 
