--- a/charts/netcup-offer-bot/values.yaml
+++ b/charts/netcup-offer-bot/values.yaml
@@ -60,30 +60,51 @@ env:
   logLevel: info
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.PodSecurityContext"
+# additionalProperties: true
 # @schema
 podSecurityContext:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Run pod as non-root user
   runAsNonRoot: true
 
+  # @schema
+  # type: integer
+  # @schema
   # -- User ID to run as
   runAsUser: 1000
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Group ID for file system access
   fsGroup: 1000
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.SecurityContext"
+# additionalProperties: true
 # @schema
 securityContext:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Allow privilege escalation
   allowPrivilegeEscalation: false
 
+  # @schema
+  # additionalProperties: true
+  # @schema
   capabilities:
+    # @schema
+    # type: array
+    # @schema
     # -- Linux capabilities to drop
     drop:
       - ALL
 
+  # @schema
+  # type: boolean
+  # @schema
   # -- Mount root filesystem as read-only
   readOnlyRootFilesystem: true
 
@@ -117,8 +138,6 @@ serviceAccount:
 
 # @schema
 # type: array
-# items:
-#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.TopologySpreadConstraint"
 # @schema
 # -- Pod topology spread constraints for availability
 topologySpreadConstraints: []
@@ -190,16 +209,28 @@ metrics:
     scrapeTimeout: 30s
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.ResourceRequirements"
+# additionalProperties: true
 # @schema
 resources:
+  # @schema
+  # additionalProperties: true
+  # @schema
   # -- Resource limits for the container.
   limits:
+    # @schema
+    # type: string
+    # @schema
     # -- Maximum allowed memory usage.
     memory: 20Mi
 
+  # @schema
+  # additionalProperties: true
+  # @schema
   # -- Resource requests for the container.
   requests:
+    # @schema
+    # type: string
+    # @schema
     # -- Minimum guaranteed memory allocation.
     memory: 15Mi
 
@@ -273,12 +304,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
+    #       items: object
     #     from:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
+    #       items: object
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -345,12 +374,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
+    #       items: object
     #     to:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
+    #       items: object
     # @schema
     # -- Custom egress rules
     customRules: []
