fix: schema items

--- a/charts/cloudflare-access-webhook-redirect/values.yaml
+++ b/charts/cloudflare-access-webhook-redirect/values.yaml
@@ -659,10 +659,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     from:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -729,10 +729,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     to:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # Example: Allow access to a generic app
     # - ports:
