--- a/charts/netcup-offer-bot/values.yaml
+++ b/charts/netcup-offer-bot/values.yaml
@@ -304,10 +304,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     from:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -374,10 +374,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     to:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # -- Custom egress rules
     customRules: []
