--- a/charts/s3-bucket-perma-link/values.yaml
+++ b/charts/s3-bucket-perma-link/values.yaml
@@ -487,10 +487,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     from:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -557,10 +557,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     to:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # Example: Allow access to internal S3
     # - ports:
