--- a/charts/portfolio/values.yaml
+++ b/charts/portfolio/values.yaml
@@ -505,10 +505,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     from:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -575,10 +575,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     #     to:
     #       type: array
-    #       items: object
+    #       items: { type: object }
     # @schema
     # -- Custom egress rules
     customRules: []
