fix: remove all json ref mentions (#122)
Co-authored-by: actions-maintenance-bot[bot] <253958393+actions-maintenance-bot[bot]@users.noreply.github.com>

--- a/charts/cloudflare-access-webhook-redirect/values.yaml
+++ b/charts/cloudflare-access-webhook-redirect/values.yaml
@@ -98,30 +98,51 @@ podAnnotations: {}
 podLabels: {}
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.PodSecurityContext"
+# additionalProperties: true
 # @schema
 podSecurityContext:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Run pod as non-root user
   runAsNonRoot: true
 
+  # @schema
+  # type: integer
+  # @schema
   # -- User ID to run as
   runAsUser: 10001
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Group ID for file system access
   fsGroup: 10001
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.SecurityContext"
+# additionalProperties: true
 # @schema
 securityContext:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Allow privilege escalation
   allowPrivilegeEscalation: false
 
+  # @schema
+  # additionalProperties: true
+  # @schema
   capabilities:
+    # @schema
+    # type: array
+    # @schema
     # -- Linux capabilities to drop
     drop:
       - ALL
 
+  # @schema
+  # type: boolean
+  # @schema
   # -- Mount root filesystem as read-only
   readOnlyRootFilesystem: false
 
@@ -268,8 +289,6 @@ ingress:
 
   # @schema
   # type: array
-  # items:
-  #   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.IngressTLS"
   # @schema
   # -- TLS configuration for ingress
   # Example:
@@ -279,115 +298,194 @@ ingress:
   tls: []
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.ResourceRequirements"
+# additionalProperties: true
 # @schema
 resources:
-  # -- Resource limits
+  # @schema
+  # additionalProperties: true
+  # @schema
   limits:
+    # @schema
+    # type: string
+    # @schema
     # -- Maximum CPU usage (e.g. 100m = 0.1 core)
     cpu: 100m
 
+    # @schema
+    # type: string
+    # @schema
     # -- Maximum memory usage (e.g. 64Mi)
     memory: 50Mi
 
-  # -- Resource requests
+  # @schema
+  # additionalProperties: true
+  # @schema
   requests:
+    # @schema
+    # type: string
+    # @schema
     # -- Guaranteed CPU request
     cpu: 10m
 
+    # @schema
+    # type: string
+    # @schema
     # -- Guaranteed memory request
     memory: 35Mi
 
 # @schema
-# allOf:
-#   - $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Probe"
-#   - properties:
-#       enabled:
-#         type: boolean
+# additionalProperties: true
 # @schema
 startupProbe:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Enable startup probe
   enabled: true
 
+  # @schema
+  # additionalProperties: true
+  # @schema
   httpGet:
+    # @schema
+    # type: string
+    # @schema
     # -- Health check path
     path: /health
 
+    # @schema
+    # type: string
+    # @schema
     # -- Health check port
     port: http
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Initial delay before probe starts
   initialDelaySeconds: 2
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Probe frequency
   periodSeconds: 5
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Probe timeout
   timeoutSeconds: 3
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Failure threshold
   failureThreshold: 30
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Success threshold
   successThreshold: 1
 
 # @schema
-# allOf:
-#   - $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Probe"
-#   - properties:
-#       enabled:
-#         type: boolean
+# additionalProperties: true
 # @schema
 livenessProbe:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Enable liveness probe
   enabled: true
 
+  # @schema
+  # additionalProperties: true
+  # @schema
   httpGet:
+    # @schema
+    # type: string
+    # @schema
     # -- Health check path
     path: /health
 
+    # @schema
+    # type: string
+    # @schema
     # -- Health check port
     port: http
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Initial delay before probe starts
   initialDelaySeconds: 10
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Probe frequency
   periodSeconds: 10
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Probe timeout
   timeoutSeconds: 5
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Failure threshold
   failureThreshold: 3
 
 # @schema
-# allOf:
-#   - $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Probe"
-#   - properties:
-#       enabled:
-#         type: boolean
+# additionalProperties: true
 # @schema
 readinessProbe:
+  # @schema
+  # type: boolean
+  # @schema
   # -- Enable readiness probe
   enabled: true
 
+  # @schema
+  # additionalProperties: true
+  # @schema
   httpGet:
+    # @schema
+    # type: string
+    # @schema
     # -- Health check path
     path: /health
 
+    # @schema
+    # type: string
+    # @schema
     # -- Health check port
     port: http
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Initial delay before probe starts
   initialDelaySeconds: 5
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Probe frequency
   periodSeconds: 5
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Probe timeout
   timeoutSeconds: 3
 
+  # @schema
+  # type: integer
+  # @schema
   # -- Failure threshold
   failureThreshold: 3
 
@@ -433,24 +531,18 @@ autoscaling:
 
 # @schema
 # type: array
-# items:
-#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.TopologySpreadConstraint"
 # @schema
 # -- Pod topology spread constraints for availability
 topologySpreadConstraints: []
 
 # @schema
 # type: array
-# items:
-#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Volume"
 # @schema
 # -- Additional volumes (e.g., cache, tmp)
 volumes: []
 
 # @schema
 # type: array
-# items:
-#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.VolumeMount"
 # @schema
 # -- Additional volume mounts (e.g., /cache)
 volumeMounts: []
@@ -464,14 +556,13 @@ nodeSelector: {}
 
 # @schema
 # type: array
-# items:
-#   $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Toleration"
 # @schema
 # -- Tolerations for taints
 tolerations: []
 
 # @schema
-# $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.core.v1.Affinity"
+# type: object
+# additionalProperties: true
 # @schema
 # -- Pod affinity rules
 affinity: {}
@@ -568,12 +659,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
+    #       items: { type: object }
     #     from:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
+    #       items: { type: object }
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -640,12 +729,10 @@ networkPolicy:
     #   properties:
     #     ports:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
+    #       items: { type: object }
     #     to:
     #       type: array
-    #       items:
-    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
+    #       items: { type: object }
     # @schema
     # Example: Allow access to a generic app
     # - ports:
