--- a/charts/mp-stats-legacy-viewer/values.yaml
+++ b/charts/mp-stats-legacy-viewer/values.yaml
@@ -231,6 +231,7 @@ serviceAccount:
 
   # @schema
   # type: object
+  # additionalProperties: true
   # @schema
   # -- Additional annotations for the service account
   annotations: {}
@@ -284,6 +285,7 @@ ingress:
 
   # @schema
   # type: object
+  # additionalProperties: true
   # @schema
   # -- Custom annotations for the Ingress resource.
   # Useful for configuring ingress controllers (e.g., cert-manager, rate limits).
