--- a/.github/configs/ct-lint.yaml
+++ b/.github/configs/ct-lint.yaml
@@ -8,4 +8,4 @@ validate-chart-values: true
 validate-maintainers: false
 validate-yaml: true
 exclude-deprecated: true
-excluded-charts: ["common", "mp-stats-legacy-viewer"]
+excluded-charts: ["common"]
