feat(mp-stats-legacy-viewer): add propper health checks

--- a/charts/mp-stats-legacy-viewer/values.yaml
+++ b/charts/mp-stats-legacy-viewer/values.yaml
@@ -57,17 +57,17 @@ application:
   # Application exposes health check on /health.
   healthCheck:
     # @schema
-    # type: string
-    # @schema
-    # -- Path for health check endpoint.
-    path: /health
-
-    # @schema
     # additionalProperties: true
     # @schema
     # -- Startup probe configuration.
     # Protects slow starting containers from being killed by liveness probe.
     startup:
+      # @schema
+      # type: string
+      # @schema
+      # -- Path for health check endpoint.
+      path: /health/startup
+
       # @schema
       # type: integer
       # @schema
@@ -105,6 +105,12 @@ application:
     # Detects if the container needs to be restarted.
     liveness:
       # @schema
+      # type: string
+      # @schema
+      # -- Path for health check endpoint.
+      path: /health/live
+
+      # @schema
       # type: integer
       # @schema
       # -- Number of seconds after the container has started before liveness probe is initiated.
@@ -140,6 +146,12 @@ application:
     # -- Readiness probe configuration.
     # Detects if the container is ready to serve traffic.
     readiness:
+      # @schema
+      # type: string
+      # @schema
+      # -- Path for health check endpoint.
+      path: /health/ready
+
       # @schema
       # type: integer
       # @schema
