fix(mp-stats-legacy-viewer): health check port

--- a/charts/mp-stats-legacy-viewer/templates/deployment.yaml
+++ b/charts/mp-stats-legacy-viewer/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
           startupProbe:
             httpGet:
               path: {{ .Values.application.healthCheck.startup.path }}
-              port: http
+              port: port
             initialDelaySeconds: {{ .Values.application.healthCheck.startup.initialDelaySeconds }}
             periodSeconds: {{ .Values.application.healthCheck.startup.periodSeconds }}
             timeoutSeconds: {{ .Values.application.healthCheck.startup.timeoutSeconds }}
@@ -61,7 +61,7 @@ spec:
           livenessProbe:
             httpGet:
               path: {{ .Values.application.healthCheck.liveness.path }}
-              port: http
+              port: port
             initialDelaySeconds: {{ .Values.application.healthCheck.liveness.initialDelaySeconds }}
             periodSeconds: {{ .Values.application.healthCheck.liveness.periodSeconds }}
             timeoutSeconds: {{ .Values.application.healthCheck.liveness.timeoutSeconds }}
@@ -70,7 +70,7 @@ spec:
           readinessProbe:
             httpGet:
               path: {{ .Values.application.healthCheck.readiness.path }}
-              port: http
+              port: port
             initialDelaySeconds: {{ .Values.application.healthCheck.readiness.initialDelaySeconds }}
             periodSeconds: {{ .Values.application.healthCheck.readiness.periodSeconds }}
             timeoutSeconds: {{ .Values.application.healthCheck.readiness.timeoutSeconds }}
