fix(mp-stats-legacy-viewer): re-enable readonly file system

--- a/charts/mp-stats-legacy-viewer/values.yaml
+++ b/charts/mp-stats-legacy-viewer/values.yaml
@@ -207,7 +207,7 @@ securityContext:
   # type: boolean
   # @schema
   # -- Mount root filesystem as read-only.
-  readOnlyRootFilesystem: false
+  readOnlyRootFilesystem: true
 
 # @schema
 # additionalProperties: true
