--- a/charts/mp-stats-legacy-viewer/values.yaml
+++ b/charts/mp-stats-legacy-viewer/values.yaml
@@ -18,7 +18,7 @@ image:
   # @schema
   # -- Container image tag to deploy.
   # Pin to a version for predictable deployments rather than using "latest".
-  tag: v0.3.2@sha256:df4e6e1ed1c25429f0263c4dd504cd7c60425d73f972cd264242b3452bb86c8b
+  tag: v0.5.0@sha256:9bb7f1caa6da0d41df3c7edffa713da0d6e81e241eda97b31049ed93a18149eb
 
   # @schema
   # enum: [Always, IfNotPresent, Never]
@@ -57,17 +57,17 @@ application:
   # Application exposes health check on /health.
   healthCheck:
     # @schema
-    # type: string
-    # @schema
-    # -- Path for health check endpoint.
-    path: /health
-
-    # @schema
     # additionalProperties: true
     # @schema
     # -- Startup probe configuration.
     # Protects slow starting containers from being killed by liveness probe.
     startup:
+      # @schema
+      # type: string
+      # @schema
+      # -- Path for health check endpoint.
+      path: /health/startup
+
       # @schema
       # type: integer
       # @schema
@@ -105,6 +105,12 @@ application:
     # Detects if the container needs to be restarted.
     liveness:
       # @schema
+      # type: string
+      # @schema
+      # -- Path for health check endpoint.
+      path: /health/live
+
+      # @schema
       # type: integer
       # @schema
       # -- Number of seconds after the container has started before liveness probe is initiated.
@@ -140,6 +146,12 @@ application:
     # -- Readiness probe configuration.
     # Detects if the container is ready to serve traffic.
     readiness:
+      # @schema
+      # type: string
+      # @schema
+      # -- Path for health check endpoint.
+      path: /health/ready
+
       # @schema
       # type: integer
       # @schema
@@ -195,7 +207,7 @@ securityContext:
   # type: boolean
   # @schema
   # -- Mount root filesystem as read-only.
-  readOnlyRootFilesystem: false
+  readOnlyRootFilesystem: true
 
 # @schema
 # additionalProperties: true
